--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <li>LESSON 09:<a href="https://midael1975.github.io/Lesson%209/homepage.html" target="_blank">Weather Site Homepage</a></li>
       <li>LESSON 10:<a href="https://midael1975.github.io/Lesson%2010/api-test.html" target="_blank">Api Test</a></li>
       <li>LESSON 10:<a href="https://midael1975.github.io/Lesson%2010/preston-10.html" target="_blank">Preston Weather Api</a></li>
-      <li>LESSON 11:<a href="https://midael1975.github.io/Lesson%2011/index.htm">Weather site</a></li>
+      <li>LESSON 11:<a href="https://midael1975.github.io/Lesson%2011/index.html">Weather site</a></li>
       <li>LESSON 12:<a href="index.html">Final Project</a></li>
       <li>LESSON 13:<a href="index.html">Final Project II</a></li>
       <li>LESSON 14:<a href="index.html">Final Project III</a></li>
