--- a/Lesson 13/index.html
+++ b/Lesson 13/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Weather Site Homepage</title>
-    <link rel="stylesheet" href="normalize.css" />
-    <link rel="stylesheet" href="small.css" />
-    <link rel="stylesheet" href="medium.css" />
-    <link rel="stylesheet" href="large.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/small.css" />
+    <link rel="stylesheet" href="css/medium.css" />
+    <link rel="stylesheet" href="css/large.css" />
   </head>
   <body>
     <header>
@@ -221,13 +221,13 @@
       <div id="pie">
         &#169;<span id="fullYear"></span>| Weather Site | Wilker Pacheco |
         <span id="design"></span>
-        <script src="site.js"></script>
+        <script src="js/site.js"></script>
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
       WebFont.load({ google: { families: ["Roboto", "open"] } });
     </script>
-    <script src="weather.js"></script>
+    <script src="js/weather.js"></script>
   </body>
 </html>
